--- a/SASS/index.css
+++ b/SASS/index.css
@@ -15,51 +15,6 @@ html {
   border: 0;
 }
 
-.nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  position: fixed;
-  width: 100vw;
-  background-color: transparent;
-  margin: 0;
-  text-align: center;
-  z-index: 999;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.nav__list {
-  margin-right: 50px;
-}
-
-.nav__list--link {
-  display: inline-block;
-  font-size: 2rem;
-  font-family: "Syne Mono", monospace;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: whitesmoke;
-  padding: 4px 6px;
-  margin: 20px 5px;
-  letter-spacing: 2px;
-}
-
-.nav__list--link:hover {
-  color: #acda06;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.nav__list--contact:hover {
-  background-color: #124a2f;
-  border-color: #124a2f;
-  color: #acda06;
-}
-
 .header {
   background-image: url(/img/kwiaty1.jpg);
   height: 40vh;
@@ -94,420 +49,12 @@ main {
   margin: auto;
 }
 
-.aboutMe {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 10px auto;
-  height: 500px;
-  width: 1200px;
-}
-
-.aboutMe__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 100%;
-  width: 400px;
-  background-color: #ffffff;
-  font-size: 16px;
-  text-align: center;
-}
-
-.aboutMe__container--header {
-  font-variant: small-caps;
-}
-
-.aboutMe__container--text {
-  padding: 20px;
-}
-
-.aboutMe__photo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: auto;
-  width: 800px;
-}
-
-.myClients {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 10px auto;
-  height: 500px;
-  width: 1200px;
-  background-color: #ffffff;
-}
-
-.myClients__left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 500px;
-}
-
-.myClients__left--up {
-  background-image: url(/img/LeftUp.jpg);
-  background-size: cover;
-  height: 50%;
-  width: 400px;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.myClients__left--up--header {
-  font-size: 30px;
-  color: white;
-  padding-bottom: 20px;
-  font-weight: 600;
-  font-variant: small-caps;
-  text-shadow: 2px 2px 4px black;
-}
-
-.myClients__left--down {
-  background-color: #124a2f;
-  height: 50%;
-  width: 360px;
-  font-size: 30px;
-  color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px;
-}
-
-.myClients__right {
-  font-size: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 20px;
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-}
-
-.myClients__right--header {
-  font-variant: small-caps;
-}
-
-.myClients__right--text {
-  padding: 20px;
-}
-
-.offer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1200px;
-  height: 500px;
-  margin: 10px auto;
-}
-
-.offer__photo {
-  background-image: url(/img/offerPhoto.jpg);
-  background-size: cover;
-  height: 100%;
-  width: 800px;
-}
-
-.offer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 100%;
-  width: 400px;
-  background-color: #ffffff;
-  font-size: 16px;
-  text-align: center;
-}
-
-.offer__container--header {
-  font-variant: small-caps;
-  font-size: 30px;
-}
-
-.offer__container--text {
-  font-size: 20px;
-  padding: 20px;
-}
-
-.offer__button {
-  display: block;
-  border-radius: 30px;
-  margin: 20px, auto;
-  width: 50%;
-  height: 50px;
-  background-color: #124a2f;
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-  padding: auto, 15px;
-}
-
-.contactContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 10px auto;
-  height: 700px;
-  width: 1200px;
-}
-
-.leftContactContainer {
-  width: 50%;
-  height: 100%;
-  background-color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.leftContactContainerHeader {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 60px auto;
-  font-size: 30px;
-  font-weight: 600;
-  color: #124a2f;
-}
-
-.nameEmail {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: 20px 40px 0 40px;
-}
-
-.nameEmailItem {
-  border: 1px solid #f5debd;
-  border-radius: 30px;
-  width: 230px;
-  height: 50px;
-  padding-left: 10px;
-  font-family: "Montserrat", sans-serif;
-}
-
-.statusName,
-.statusEmail {
-  font-size: 15px;
-  width: 240px;
-  height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  border-radius: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #d82f2f;
-  -webkit-animation: notValid 3s infinite;
-          animation: notValid 3s infinite;
-  color: white;
-}
-
-@-webkit-keyframes notValid {
-  0% {
-    background-color: red;
-  }
-  50% {
-    background-color: white;
-  }
-  /* 90% {background-color: white;} */
-  100% {
-    background-color: red;
-  }
-}
-
-@keyframes notValid {
-  0% {
-    background-color: red;
-  }
-  50% {
-    background-color: white;
-  }
-  /* 90% {background-color: white;} */
-  100% {
-    background-color: red;
-  }
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.messageSubmitBtn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 600px;
-}
-
-.messageSubmit {
-  padding-left: 10px;
-  border: 1px solid #f5debd;
-  border-radius: 30px;
-  width: 510px;
-  height: 200px;
-  margin: 20px 40px;
-  padding-left: 10px;
-  padding-top: 10px;
-  font-family: "Montserrat", sans-serif;
-}
-
-.submitBtn {
-  display: block;
-  border-radius: 30px;
-  margin-left: 40px;
-  width: 30%;
-  height: 50px;
-  background-color: #124a2f;
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-}
-
-.rightContactContainer {
-  width: 50%;
-  height: 100%;
-  background-image: url(/img/contactForm.jpg);
-  background-size: cover;
-}
-
-footer {
-  background-color: #000;
-  color: aliceblue;
-  padding: 20px;
-  font-size: 21px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 400px;
-  width: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.footerInfos {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  border: 1px solid white;
-  border-radius: 30px;
-  padding: 30px;
-  margin-top: 20px;
-}
-
-.footerPhone {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-bottom: 20px;
-  margin: auto;
-}
-
-.footerCopy {
-  margin-bottom: 20px;
-}
-
-footerAdress {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-top: 20px;
-}
-
 .map {
   height: 500px;
   width: 100%;
 }
 
-.popup {
+.map__popup {
   background-color: black;
   color: white;
   border-radius: 5px;
@@ -515,7 +62,7 @@ footerAdress {
   font-size: 1.3rem;
 }
 
-.popup:after {
+.map__popup:after {
   position: absolute;
   z-index: 1;
   display: block;
