--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -9,43 +9,6 @@
   border: 0;
 }
 
-.nav {
-  display: flex;
-  justify-content: flex-end;
-  position: fixed;
-  width: 100vw;
-  background-color: transparent;
-  margin: 0;
-  text-align: center;
-  z-index: 999;
-  transition: all 0.2s ease;
-
-  &__list {
-    margin-right: 50px;
-
-    &--link {
-      display: inline-block;
-      font-size: 2rem;
-      font-family: "Syne Mono", monospace;
-      text-transform: uppercase;
-      text-decoration: none;
-      color: whitesmoke;
-      padding: 4px 6px;
-      margin: 20px 5px;
-      letter-spacing: 2px;
-    }
-    &--link:hover {
-      color: $bright-green;
-      transition: 0.3s;
-    }
-    &--contact:hover {
-      background-color: $dark-green;
-      border-color: $dark-green;
-      color: $bright-green;
-    }
-  }
-}
-
 // .nav__bgr {
 //   background-color: #000;
 //   box-shadow: 0 10px 6px -6px black;
@@ -76,300 +39,31 @@
 main {
   margin: auto;
 }
-.aboutMe {
-  display: flex;
-  margin: 10px auto;
-  height: 500px;
-  width: 1200px;
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 400px;
-    background-color: #ffffff;
-    font-size: 16px;
-    text-align: center;
-    &--header {
-      font-variant: small-caps;
-    }
-    &--text {
-      padding: 20px;
-    }
-  }
-  &__photo {
-    display: flex;
-    height: auto;
-    width: 800px;
-  }
-}
 
-.myClients {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px auto;
-  height: 500px;
-  width: 1200px;
-  background-color: #ffffff;
-  &__left {
-    display: flex;
-    flex-direction: column;
-    height: 500px;
-    &--up {
-      background-image: url(/img/LeftUp.jpg);
-      background-size: cover;
-      height: 50%;
-      width: 400px;
-      text-align: center;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      &--header {
-        font-size: 30px;
-        color: white;
-        padding-bottom: 20px;
-        font-weight: 600;
-        font-variant: small-caps;
-        text-shadow: 2px 2px 4px black;
-      }
-    }
-    &--down {
-      background-color: $dark-green;
-      height: 50%;
-      width: 360px;
-      font-size: 30px;
-      color: white;
-      display: flex;
-      text-align: center;
-      align-items: center;
-      padding: 20px;
-    }
-  }
-  &__right {
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    &--header {
-      font-variant: small-caps;
-    }
-    &--text {
-      padding: 20px;
-    }
-  }
-}
-
-.offer {
-  display: flex;
-  width: 1200px;
-  height: 500px;
-  margin: 10px auto;
-
-  &__photo {
-    background-image: url(/img/offerPhoto.jpg);
-    background-size: cover;
-    height: 100%;
-    width: 800px;
-  }
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 400px;
-    background-color: #ffffff;
-    font-size: 16px;
-    text-align: center;
-
-    &--header {
-      font-variant: small-caps;
-      font-size: 30px;
-    }
-    &--text {
-      font-size: 20px;
-      padding: 20px;
-    }
-  }
-  &__button {
-    display: block;
-    border-radius: 30px;
-    margin: 20px, auto;
-    width: 50%;
-    height: 50px;
-    background-color: $dark-green;
-    color: white;
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-    padding: auto, 15px;
-  }
-}
-// .offerTextContainer a {
-//   text-decoration: none;
-// }
-// .offerTextContainer a:hover {
-//   text-decoration: underline;
-// }
-
-.contactContainer {
-  display: flex;
-  margin: 10px auto;
-  height: 700px;
-  width: 1200px;
-}
-.leftContactContainer {
-  width: 50%;
-  height: 100%;
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-}
-.leftContactContainerHeader {
-  display: flex;
-  justify-content: center;
-  margin: 60px auto;
-  font-size: 30px;
-  font-weight: 600;
-  color: $dark-green;
-}
-.nameEmail {
-  display: flex;
-  justify-content: space-between;
-  margin: 20px 40px 0 40px;
-}
-.nameEmailItem {
-  border: 1px solid #f5debd;
-  border-radius: 30px;
-  width: 230px;
-  height: 50px;
-  padding-left: 10px;
-  font-family: "Montserrat", sans-serif;
-}
-.statusName,
-.statusEmail {
-  font-size: 15px;
-  width: 240px;
-  height: 30px;
-  display: flex;
-  border-radius: 30px;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(216, 47, 47);
-  animation: notValid 3s infinite;
-  color: white;
-}
-@keyframes notValid {
-  0% {
-    background-color: red;
-  }
-  50% {
-    background-color: white;
-  }
-  /* 90% {background-color: white;} */
-  100% {
-    background-color: red;
-  }
-}
-.hidden {
-  visibility: hidden;
-}
-.messageSubmitBtn {
-  display: flex;
-  flex-direction: column;
-  width: 600px;
-}
-.messageSubmit {
-  padding-left: 10px;
-  border: 1px solid #f5debd;
-  border-radius: 30px;
-  width: 510px;
-  height: 200px;
-  margin: 20px 40px;
-  padding-left: 10px;
-  padding-top: 10px;
-  font-family: "Montserrat", sans-serif;
-}
-.submitBtn {
-  display: block;
-  border-radius: 30px;
-  margin-left: 40px;
-  width: 30%;
-  height: 50px;
-  background-color: $dark-green;
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
-}
-.rightContactContainer {
-  width: 50%;
-  height: 100%;
-  background-image: url(/img/contactForm.jpg);
-  background-size: cover;
-}
-
-footer {
-  background-color: #000;
-  color: aliceblue;
-  padding: 20px;
-  font-size: 21px;
-  display: flex;
-  height: 400px;
-  width: 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.footerInfos {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  border: 1px solid white;
-  border-radius: 30px;
-  padding: 30px;
-  margin-top: 20px;
-}
-.footerPhone {
-  display: flex;
-  padding-bottom: 20px;
-  margin: auto;
-}
-.footerCopy {
-  margin-bottom: 20px;
-}
-footerAdress {
-  display: flex;
-  padding-top: 20px;
-}
 .map {
   height: 500px;
   width: 100%;
-}
-.popup {
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-  padding: 0.5rem;
-  font-size: 1.3rem;
-}
-.popup:after {
-  position: absolute;
-  z-index: 1;
-  display: block;
-  width: 0;
-  height: 0;
-  border: 5px solid transparent;
-  content: "";
-  top: 50%;
-  right: 100%;
-  transform: translateY(-50%);
-  border-left-width: 0;
-  border-right-color: rgba(0, 0, 0, 0.8);
+  &__popup {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    padding: 0.5rem;
+    font-size: 1.3rem;
+  }
+  &__popup:after {
+    position: absolute;
+    z-index: 1;
+    display: block;
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    content: "";
+    top: 50%;
+    right: 100%;
+    transform: translateY(-50%);
+    border-left-width: 0;
+    border-right-color: rgba(0, 0, 0, 0.8);
+  }
 }
 
 @media (max-width: 820px) {
