--- a/SASS/_contact.scss
+++ b/SASS/_contact.scss
@@ -5,7 +5,7 @@
 .contact {
   display: flex;
   flex-direction: column;
-  height: 65vh;
+  height: 100%;
   width: 100%;
   color: red;
   background-color: #ffffff;
@@ -21,7 +21,7 @@
     @include lg {
       display: flex;
       width: 50%;
-      height: 100%;
+      height: 60vh;
       background-image: url(../img/contactForm.jpg);
       background-size: cover;
     }
@@ -40,8 +40,11 @@
   }
 
   &__container {
-    height: 60vh;
+    // height: 60vh;
     width: 100%;
+    @include md {
+      height: 60vh;
+    }
   }
   &__header {
     text-align: center;
@@ -99,7 +102,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 50%;
+  // height: 50%;
   &__label {
     display: flex;
     flex-direction: column;
