--- a/SASS/_myClients.scss
+++ b/SASS/_myClients.scss
@@ -10,7 +10,7 @@
   // margin: 10px auto;
   // height: 500px;
   width: 100%;
-  height: 35vh;
+  // height: 35vh;
 
   background-color: #ffffff;
   @include lg {
