--- a/SASS/_nav.scss
+++ b/SASS/_nav.scss
@@ -4,7 +4,7 @@
 // base & layout
 @import "base";
 .nav {
-  width: 80vw;
+  width: 70vw;
   height: 60vh;
   background-color: $dark-green;
   position: fixed;
@@ -40,8 +40,8 @@
     width: 35px;
     height: 30px;
     position: fixed;
-    top: 50px;
-    right: 50px;
+    top: 10px;
+    right: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -58,7 +58,7 @@
     }
   }
   &__list {
-    margin: auto;
+    margin: 40px 5px 0 0;
     text-align: end;
     display: flex;
     flex-direction: column;
