--- a/SASS/_offer.scss
+++ b/SASS/_offer.scss
@@ -1,6 +1,6 @@
 .offer {
   width: 100%;
-  height: 25vh;
+  // height: 25vh;
   @include lg {
     height: 40vh;
     margin: 20px 0;
@@ -11,7 +11,7 @@
     @include lg {
       background-image: url(../img/offerPhoto.jpg);
       background-size: cover;
-      height: 100%;
+      height: 40vh;
       border: 1px solid red;
       width: 50%;
       z-index: 999;
@@ -32,12 +32,12 @@
 
     &--header {
       font-size: 2rem;
-      margin-top: 20px;
+      margin: 20px;
       color: $dark-green;
     }
     &--text {
       font-size: 1rem;
-      margin: 0 20px;
+      padding: 20px;
       @include lg {
         font-size: 1.3rem;
       }
