--- a/SASS/_opinion.scss
+++ b/SASS/_opinion.scss
@@ -1,7 +1,7 @@
 .opinion {
   background-color: rgb(255, 255, 255);
   width: 100%;
-  height: 25vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,12 +29,12 @@
   align-items: center;
   justify-content: space-around;
 
+  padding: 30px;
   height: 100%;
   // top: 50%;
   &__text {
     display: flex;
     text-align: center;
-    padding: 0 30px;
     // margin-bottom: 20px;
   }
   &__author {
