--- a/SASS/index.css
+++ b/SASS/index.css
@@ -1,5 +1,5 @@
 .nav {
-  width: 80vw;
+  width: 70vw;
   height: 60vh;
   background-color: #124a2f;
   position: fixed;
@@ -55,8 +55,8 @@
   width: 35px;
   height: 30px;
   position: fixed;
-  top: 50px;
-  right: 50px;
+  top: 10px;
+  right: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,7 +84,7 @@
 }
 
 .nav__list {
-  margin: auto;
+  margin: 40px 5px 0 0;
   text-align: end;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -192,9 +192,10 @@
 }
 
 .aboutMe {
-  color: #124a2f;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: flex;
+  color: #124a2f;
   display: flex;
   width: 100%;
 }
@@ -265,7 +266,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 65vh;
+  height: 100%;
   width: 100%;
   color: red;
   background-color: #ffffff;
@@ -291,7 +292,7 @@
     display: -ms-flexbox;
     display: flex;
     width: 50%;
-    height: 100%;
+    height: 60vh;
     background-image: url(../img/contactForm.jpg);
     background-size: cover;
   }
@@ -320,8 +321,13 @@
 }
 
 .form__container {
-  height: 60vh;
   width: 100%;
+}
+
+@media (min-width: 768px) {
+  .form__container {
+    height: 60vh;
+  }
 }
 
 .form__header {
@@ -410,7 +416,6 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 50%;
 }
 
 .message__label {
@@ -524,7 +529,6 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 35vh;
   background-color: #ffffff;
 }
 
@@ -703,7 +707,7 @@
 .opinion {
   background-color: white;
   width: 100%;
-  height: 25vh;
+  min-height: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -762,6 +766,7 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  padding: 30px;
   height: 100%;
 }
 
@@ -770,7 +775,6 @@
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  padding: 0 30px;
 }
 
 .slide__author {
@@ -781,7 +785,6 @@
 
 .offer {
   width: 100%;
-  height: 25vh;
 }
 
 @media (min-width: 992px) {
@@ -799,7 +802,7 @@
   .offer__photo {
     background-image: url(../img/offerPhoto.jpg);
     background-size: cover;
-    height: 100%;
+    height: 40vh;
     border: 1px solid red;
     width: 50%;
     z-index: 999;
@@ -831,13 +834,13 @@
 
 .offer__container--header {
   font-size: 2rem;
-  margin-top: 20px;
+  margin: 20px;
   color: #124a2f;
 }
 
 .offer__container--text {
   font-size: 1rem;
-  margin: 0 20px;
+  padding: 20px;
 }
 
 @media (min-width: 992px) {
@@ -912,7 +915,7 @@ html {
 
 .header {
   background-image: url(../img/kwiaty1.jpg);
-  height: 20vh;
+  height: 30vh;
   width: 100%;
   background-size: cover;
 }
